--- a/update_linux.yaml
+++ b/update_linux.yaml
@@ -3,7 +3,7 @@
   hosts: servers
   become: yes
   become_method: sudo
-  gather_facts: no
+  gather_facts: yes
 
   tasks:
     - name: Display detected OS
