Update sanity_check.yaml for formatting and structure

--- a/sanity_check.yaml
+++ b/sanity_check.yaml
@@ -1,9 +1,14 @@
-tasks:
+---
+- name: Sanity check
+  hosts: servers
+  gather_facts: no
+  become: yes
+  tasks:
     - name: Verify sudo access
       ansible.builtin.command: whoami
       become: yes
       register: user_output
-
+    
     - name: Show the user
       ansible.builtin.debug:
-        msg: "I am running as user: {{ user_output.stdout }}"
+      msg: "I am running as user: {{ user_output.stdout }}"
