Update update_linux.yaml for package management tasks

--- a/update_linux.yaml
+++ b/update_linux.yaml
@@ -1,6 +1,7 @@
 ---
 - name: Check and install system updates
   hosts: servers
+  remote_user: paulo
   become: true
   gather_facts: true
 
@@ -9,9 +10,11 @@
       ansible.builtin.debug:
         msg: "Detected {{ ansible_distribution }} {{ ansible_distribution_version }}"
 
+    # Debian / Ubuntu systems
     - name: Update apt package cache
       ansible.builtin.apt:
         update_cache: yes
+        cache_valid_time: 3600
       when: ansible_os_family == "Debian"
 
     - name: Upgrade all packages (Debian/Ubuntu)
@@ -21,10 +24,9 @@
       when: ansible_os_family == "Debian"
 
     # RedHat / CentOS / Fedora systems
-    - name: Make sure dnf/yum cache is up-to-date
-      ansible.builtin.command: dnf makecache
-      register: dnf_cache
-      changed_when: "'Metadata cache created' in dnf_cache.stdout"
+    - name: Make sure dnf cache is up-to-date
+      ansible.builtin.dnf:
+        update_cache: yes
       when: ansible_os_family == "RedHat"
 
     - name: Upgrade all packages (RedHat/CentOS/Fedora)
@@ -36,9 +38,8 @@
     - name: Reboot if kernel or system update was applied
       ansible.builtin.reboot:
         msg: "System reboot initiated by Ansible after updates"
-        reboot_timeout: 120       # Wait at most 2 minutes
-        connect_timeout: 10       # SSH connection timeout
+        reboot_timeout: 600
+        connect_timeout: 10
         pre_reboot_delay: 5
-        post_reboot_delay: 10     # Wait a bit before checking SSH
-        test_command: whoami      # Command to verify system is back
-
+        post_reboot_delay: 15
+        test_command: whoami
